final commit of challenge 5

--- a/Pymaceuticals/pymaceuticals_analysis.ipynb
+++ b/Pymaceuticals/pymaceuticals_analysis.ipynb
@@ -6,10 +6,9 @@
    "source": [
     "# Pymaceuticals Inc.\n",
     "---\n",
-    "\n",
     "### Analysis\n",
     "\n",
-    "- Add your analysis here.\n",
+    "Over the course of 45 days, tumor development was observed and measured to compare the performance of Pymaceuticals' drug, Capomulin, against other treatment regimens. In the study, there were 248 mice tested, 51% male and 49% female. From initial summary statistics, the drug of interest Capomulin and other treatment drug Remicane, present less variability in Tumor Volume measured in mm3. In the number of times the mice were observed, there is a sku in relation to other treatment drugs observed versus Capomulin and Remicane. This lack of consistency of observed tumor volume could impact a depiction of efficiently of drugs. However, Capomulin and Remicane offer similar results in tumor volume mass with dramatic increases with infubinol and Ceftamin in comparison. From a sample of a mouse, l509, treated with Capomulin over 45 days there is a positive slope with a dramatic negative slope. These behaviors could exhibit the growth of the tumor until the drugs affect started to become present. There is a slight uptick at the 35 day mark and more data will be needed to make any conclusions on the effectiveness of the drug. There is a strong postive correlation with average tumor volume and weight of mice given Capomulin--as mouse weight increases, these tends to be a corresponding increase in the average observed tumor volume. Further studies on weight, tumor volume and timepoints need further analysis. However, from information we have taken from mouse l509, we can hypothesis that as the mouse is Capomulin the tumor volume decreases in size, the mouse lost weight due to the affects of the drug.    \n",
     " "
    ]
   },
